Update menu and footer implemeted

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="underline"></div>
         </div>
         <div class="section-items">
-          <article class="menu-item">
+          <div class="menu-item">
             <img src="./images/item-1.jpeg" class="photo" alt="" />
             <div class="item-info">
               <header>
@@ -47,8 +47,8 @@
                 accusantium optio. Lorem ipsum dolor sit amet, consectetur
               </p>
             </div>
-          </article>
-          <article class="menu-item">
+          </div>
+          <div class="menu-item">
             <img src="./images/item-1.jpeg" class="photo" alt="" />
             <div class="item-info">
               <header>
@@ -61,10 +61,28 @@
                 accusantium optio.
               </p>
             </div>
-          </article>
+          </div>
+          <div class="menu-item">
+            <img src="./images/item-1.jpeg" class="photo" alt="" />
+            <div class="item-info">
+              <header>
+                <h4>buttermilk pancakes</h4>
+                <h4 class="price">$15</h4>
+              </header>
+              <p class="item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Eligendi maxime doloremque odio omnis eius earum harum
+                accusantium optio.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">mirzahusic</div>
+    </footer>
 
     <!-- script -->
     <script src="app.js"></script>
