--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
           <h4>our menu</h4>
           <div class="underline"></div>
         </div>
-        <div class="section-items">
-          <div class="menu-item">
+        <div class="section-menu-buttons">
+          </div>
+
+          <div class="section-items">
+            <!-- <div class="menu-item">
             <img src="./images/item-1.jpeg" class="photo" alt="" />
             <div class="item-info">
               <header>
@@ -47,34 +50,7 @@
                 accusantium optio. Lorem ipsum dolor sit amet, consectetur
               </p>
             </div>
-          </div>
-          <div class="menu-item">
-            <img src="./images/item-1.jpeg" class="photo" alt="" />
-            <div class="item-info">
-              <header>
-                <h4>buttermilk pancakes</h4>
-                <h4 class="price">$15</h4>
-              </header>
-              <p class="item-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Eligendi maxime doloremque odio omnis eius earum harum
-                accusantium optio.
-              </p>
-            </div>
-          </div>
-          <div class="menu-item">
-            <img src="./images/item-1.jpeg" class="photo" alt="" />
-            <div class="item-info">
-              <header>
-                <h4>buttermilk pancakes</h4>
-                <h4 class="price">$15</h4>
-              </header>
-              <p class="item-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Eligendi maxime doloremque odio omnis eius earum harum
-                accusantium optio.
-              </p>
-            </div>
+          </div> -->
           </div>
         </div>
       </div>
