--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <!-- style css -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -8,8 +14,8 @@
     <header class="nav-header">
       <div class="container">
         <nav class="nav-container">
-          <div class="header-col"><h3>logo</h3></div>
-          <div class="header-col">
+          <div class="nav-logo"><h3>food castle</h3></div>
+          <div class="nav-list">
             <ul>
               <li>home</li>
               <li>aubout us</li>
@@ -17,40 +23,27 @@
               <li>staff</li>
             </ul>
           </div>
-          <div class="header-col">
+          <div class="nav-phone-number">
             <h3>+38761650728</h3>
           </div>
         </nav>
-        <div class="header-container">
-          <h1>are you hugry?</h1>
-          <button>see our menu</button>
+        <div class="header-content">
+          <h1 class="header-content-title">are you hungry? </h1>
+          <h2>Dive into our splendid menu </h2>
         </div>
       </div>
     </header>
     <section class="menu">
       <div class="container">
         <div class="section-title">
-          <h4>our menu</h4>
+          <h4>our <span>menu</span></h4>
           <div class="underline"></div>
         </div>
         <div class="section-menu-buttons">
           </div>
 
           <div class="section-items">
-            <!-- <div class="menu-item">
-            <img src="./images/item-1.jpeg" class="photo" alt="" />
-            <div class="item-info">
-              <header>
-                <h4>buttermilk pancakes</h4>
-                <h4 class="price">$15</h4>
-              </header>
-              <p class="item-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Eligendi maxime doloremque odio omnis eius earum harum
-                accusantium optio. Lorem ipsum dolor sit amet, consectetur
-              </p>
-            </div>
-          </div> -->
+          
           </div>
         </div>
       </div>
