--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <div class="nav-logo"><h3>food castle</h3></div>
           <div class="nav-list">
             <ul>
-              <li>home</li>
-              <li>aubout us</li>
-              <li>menu</li>
-              <li>staff</li>
+              <li><a href="#">home</a></li>
+              <li><a href="#aboutus">about us</a></li>
+              <li><a href="#menu">menu</a></li>
+              <li><a href="#">reservation</a></li>
             </ul>
           </div>
           <div class="nav-phone-number">
@@ -31,7 +31,8 @@
           <h2>Dive into our splendid menu </h2>
         </div>
     </header>
-    <section class="about-us">
+                    <!-- ABOUT US  -->
+    <section id="aboutus"class="about-us">
       <div class="section-container-about-us  ">
       <div class="about-us-desc  ">
         <h1>Abut us</h1>
@@ -53,7 +54,7 @@
       </div></div>
 
     </section>
-    <section class="">
+    <section id="menu">
       <div class="menu ">
         <div class="section-title ">
           <h4>our <span>menu</span></h4>
