--- a/index.html
+++ b/index.html
@@ -69,11 +69,17 @@
       </div>
     </div>
     </section>
+    <section class="map">
+      <div class="section-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10643.548744559392!2d11.5226441!3d48.170255499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e7644958cc525%3A0x34b4c71592ecec81!2sVilla%20Dante!5e0!3m2!1shr!2sde!4v1646928896388!5m2!1shr!2sde"   loading="lazy"></iframe>
+      </div>
+      <div class="footer-img "><img src="images/footer.png"></div>
+    </section>
 
     <footer>
       <div class="container">mirzahusic</div>
     </footer>
-
+    
     <!-- script -->
     <script src="app.js"></script>
   </body>
