book a table input update, added reservation class and function resetvalues

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         </div>
       <div id="reservation" class="reservation-container ">
         <div class="reservation-input">
-          <h2>book a table</h2>
-
-          <input >
-          <input >
-          <input >
+          <input type="text" placeholder="Name" id="guestName">
+          <input type="number" placeholder="Number of guests" id="numOfGuests">
+          <input type="date" placeholder="Date" id="date">
+          <input type="time" placeholder="time" id="time">
+          <input type="button" value="Book A Table" id="submitBtn">
         </div>
       </div>
     </div>
