--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+
     <!-- style css -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -69,9 +72,9 @@
       </div>
     </div>
     </section>
-    <section class="map">
+    <section id="map">
       <div class="section-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10643.548744559392!2d11.5226441!3d48.170255499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e7644958cc525%3A0x34b4c71592ecec81!2sVilla%20Dante!5e0!3m2!1shr!2sde!4v1646928896388!5m2!1shr!2sde"   loading="lazy"></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10643.548744559392!2d11.5226441!3d48.170255499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e7644958cc525%3A0x34b4c71592ecec81!2sVilla%20Dante!5e0!3m2!1shr!2sde!4v1646928896388!5m2!1shr!2sde"   loading="lazy"></iframe> -->
       </div>
     
     </section>
@@ -102,5 +105,6 @@
 
     <!-- script -->
     <script src="app.js"></script>
+
   </body>
 </html>
